add metrics to debug rover utp epn